--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,14 +13,18 @@ env:
   OWNER: "fabianazioti"
 
 jobs:
+  ################################################
+  #   EXTRACT TAG DETAILS
+  ################################################
   details:
     runs-on: ubuntu-latest
     outputs:
       new_version: ${{ steps.release.outputs.new_version }}
       suffix: ${{ steps.release.outputs.suffix }}
       tag_name: ${{ steps.release.outputs.tag_name }}
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Extract tag and Details
         id: release
@@ -37,40 +41,46 @@ jobs:
             exit 1
           fi
 
+  ################################################
+  #   CHECK VERSION ON PYPI
+  ################################################
   check_pypi:
     needs: details
     runs-on: ubuntu-latest
+
     steps:
       - name: Fetch information from PyPI
         run: |
           response=$(curl -s https://pypi.org/pypi/${{ env.PACKAGE_NAME }}/json || echo "{}")
           latest_previous_version=$(echo $response | grep -oP '"releases":\{"\K[^"]+' | sort -rV | head -n 1)
-
           if [ -z "$latest_previous_version" ]; then
             echo "Package not found on PyPI."
             latest_previous_version="0.0.0"
           fi
-
           echo "latest_previous_version=$latest_previous_version" >> $GITHUB_ENV
 
       - name: Compare versions and exit if not newer
         run: |
           NEW_VERSION=${{ needs.details.outputs.new_version }}
           LATEST_VERSION=$latest_previous_version
-
-          if [ "$(printf '%s\n' "$LATEST_VERSION" "$NEW_VERSION" | sort -rV | head -n 1)" != "$NEW_VERSION" ] || [ "$NEW_VERSION" == "$LATEST_VERSION" ]; then
+          if [ "$(printf '%s\n' "$LATEST_VERSION" "$NEW_VERSION" | sort -rV | head -n 1)" != "$NEW_VERSION" ] \
+            || [ "$NEW_VERSION" == "$LATEST_VERSION" ]; then
             echo "The new version $NEW_VERSION is not greater than $LATEST_VERSION"
             exit 1
           fi
 
+  ################################################
+  #   BUILD PACKAGE
+  ################################################
   setup_and_build:
     needs: [details, check_pypi]
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
@@ -93,21 +103,22 @@ jobs:
           python3 -m build
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: dist
           path: dist/
 
   ################################################
-  # 1) TESTPYPI PUBLISH (COM TWINE)
+  #  TESTPYPI (TWINE)
   ################################################
   testpypi_publish:
-    name: Upload release to TestPyPI (SAFE TEST)
+    name: Upload to TestPyPI (SAFE TEST)
     needs: [setup_and_build, details]
     runs-on: ubuntu-latest
+
     steps:
       - name: Download artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: dist
           path: dist/
@@ -121,7 +132,7 @@ jobs:
           python3 -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
 
   ################################################
-  # 2) PYPI OFICIAL (COM TRUSTED PUBLISHING OIDC)
+  #  PYPI (TRUSTED PUBLISHING)
   ################################################
   pypi_publish:
     name: Upload release to PyPI
@@ -131,9 +142,10 @@ jobs:
       name: release
     permissions:
       id-token: write
+
     steps:
       - name: Download artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: dist
           path: dist/
@@ -141,20 +153,24 @@ jobs:
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
 
+  ################################################
+  #  GITHUB RELEASE
+  ################################################
   github_release:
     name: Create GitHub Release
     needs: [setup_and_build, details]
     runs-on: ubuntu-latest
     permissions:
       contents: write
+
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Download artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: dist
           path: dist/
