--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,6 +10,7 @@ on:
 
 env:
   PACKAGE_NAME: "fabi-demo"
+  MODULE_NAME: "fabi_demo"
   OWNER: "fabianazioti"
 
 jobs:
@@ -96,7 +97,7 @@ jobs:
       - name: Generate stubs
         run: |
           python3 -m pip install mypy
-          python3 -m mypy.stubgen ${{ env.PACKAGE_NAME }} -o .
+          python3 -m mypy.stubgen ${{ env.MODULE_NAME }} -o .
 
       - name: Build source and wheel distribution
         run: |
