--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -97,7 +97,7 @@ jobs:
       - name: Generate stubs
         run: |
           python3 -m pip install mypy
-          python3 -m mypy.stubgen ${{ env.MODULE_NAME }} -o .
+          stubgen ${{ env.MODULE_NAME }} -o .
 
       - name: Build source and wheel distribution
         run: |
