--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -235,27 +235,57 @@ jobs:
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
 
-  # Release
+  # Pre-Release and Release jobs
+  github_prerelease:
+    name: Create GitHub Pre-Release
+    runs-on: ubuntu-latest
+    needs:
+      - details
+      - setup_and_build
+      - testpypi_publish
+
+    if: >
+      needs.testpypi_publish.result == 'success' &&
+      needs.details.outputs.is_prerelease == 'true'
+
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Create GitHub Pre-Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ needs.details.outputs.tag_name }}
+          name: "Version ${{ needs.details.outputs.clean_version }}"
+          generate_release_notes: true
+          prerelease: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   github_release:
     name: Create GitHub Release
+    runs-on: ubuntu-latest
     needs:
       - details
       - setup_and_build
       - testpypi_publish
       - pypi_publish
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
 
     if: >
       needs.testpypi_publish.result == 'success' &&
-      (
-        needs.details.outputs.is_prerelease == 'true' ||
-        needs.pypi_publish.result == 'success'
-      )
+      needs.pypi_publish.result == 'success' &&
+      needs.details.outputs.is_prerelease == 'false'
+
+    permissions:
+      contents: write
 
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -266,12 +296,6 @@ jobs:
           tag_name: ${{ needs.details.outputs.tag_name }}
           name: "Version ${{ needs.details.outputs.clean_version }}"
           generate_release_notes: true
-
-          # pre-release
-          prerelease: ${{ needs.details.outputs.is_prerelease }}
-
-          # latest
-          make_latest: ${{ needs.details.outputs.is_prerelease == 'false' }}
-
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
