--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -180,7 +180,7 @@ jobs:
 
       - name: Install build and twine
         run: |
-          python3 -m pip install --upgrade pip
+          python3 -m pip install --upgrade pip setuptools wheel
           python3 -m pip install build twine
 
       - name: Generate stubs
@@ -216,7 +216,7 @@ jobs:
           TWINE_USERNAME: "__token__"
           TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
         run: |
-          python3 -m pip install twine
+          #python3 -m pip install twine
           python3 -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
 
   # Publish to PYPI
