--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -161,6 +161,7 @@ jobs:
           fi
 
   # Build Package
+
   setup_and_build:
     needs: [details, check_pypi, bump-version]
     runs-on: ubuntu-latest
@@ -178,10 +179,14 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install build and twine
+      - name: Force modern build tooling
         run: |
-          python3 -m pip install --upgrade pip setuptools wheel
-          python3 -m pip install build twine
+          python3 -m pip install --upgrade pip
+          python3 -m pip install --upgrade "setuptools>=67" wheel build twine
+
+      - name: Clean previous artifacts
+        run: |
+          rm -rf dist *.egg-info
 
       - name: Generate stubs
         run: |
@@ -191,6 +196,10 @@ jobs:
       - name: Build source and wheel distribution
         run: |
           python3 -m build
+
+      - name: Check distributions (fail fast)
+        run: |
+          python3 -m twine check dist/*
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -216,10 +225,12 @@ jobs:
           TWINE_USERNAME: "__token__"
           TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
         run: |
-          #python3 -m pip install twine
-          python3 -m pip install --upgrade pip setuptools wheel
+          python3 -m pip install --upgrade pip
           python3 -m pip install twine
-          python3 -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+          python3 -m twine upload \
+            --repository-url https://test.pypi.org/legacy/ \
+            --verbose \
+            dist/*
 
   # Publish to PYPI
   pypi_publish:
