--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,24 @@
 [project]
 name = "fabi-demo"
-version = "1.0.6"
+version = "1.0.6a"
 description = ""
 authors = [
     {name = "FZV",email = "fake_email@email.com"}
 ]
-readme = "README.md"
-license = {file = "LICENSE"}
+readme = "README.rst"
+license = { text = "GNU General Public License v3.0" }
 requires-python = ">=3.10"
+classifiers = [
+    "Intended Audience :: Information Technology",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
 dependencies = [
     "click (>=8.3.1,<9.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
