--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "FZV",email = "fake_email@email.com"}
 ]
 readme = "README.rst"
-license = { text = "GNU General Public License v3.0" }
+license = {file = "LICENSE"}
 requires-python = ">=3.10"
 classifiers = [
     "Intended Audience :: Information Technology",
